fix overflow-x

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -36,8 +36,10 @@ body
   padding: 0
 
   overflow: auto
-  overflow-x: hidden
   -webkit-overflow-scrolling: touch
+
+.container
+  overflow-x: hidden
 
 .wrap
   +container(1020px)
